Add SMILES credit footer

--- a/recall.html
+++ b/recall.html
@@ -124,6 +124,12 @@
         </div>
     </main>
 
+    <footer class="mt-12 bg-white dark:bg-slate-900 border-t dark:border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
+            <p class="text-xs text-slate-500">colored drawings powered by smiles</p>
+        </div>
+    </footer>
+
     
 
     
