Add JSME credit to footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <footer class="mt-12 bg-white dark:bg-slate-900 border-t dark:border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-            <p class="text-xs text-slate-500">colored drawings powered by <a href="https://en.wikipedia.org/wiki/Simplified_molecular-input_line-entry_system" class="underline underline-offset-2 hover:text-slate-700 dark:hover:text-slate-200" target="_blank" rel="noopener noreferrer">smiles</a></p>
+            <p class="text-xs text-slate-500">colored drawings powered by <a href="https://en.wikipedia.org/wiki/Simplified_molecular-input_line-entry_system" class="underline underline-offset-2 hover:text-slate-700 dark:hover:text-slate-200" target="_blank" rel="noopener noreferrer">smiles</a>; drawing software from <a href="https://jsme-editor.github.io/" class="underline underline-offset-2 hover:text-slate-700 dark:hover:text-slate-200" target="_blank" rel="noopener noreferrer">JSME</a></p>
         </div>
     </footer>
 
