Shorten draw section title

--- a/draw.html
+++ b/draw.html
@@ -80,7 +80,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 items-start">
             <div class="bg-white dark:bg-slate-900 rounded-2xl border border-slate-200 dark:border-slate-800 shadow-lg p-4">
                 <div class="flex items-center justify-between mb-4">
-                    <h2 class="text-lg font-bold">Draw the structure</h2>
+                    <h2 class="text-lg font-bold">Draw</h2>
                     <button id="new-target-btn" class="px-3 py-2 rounded-xl bg-slate-900 dark:bg-slate-100 text-white dark:text-slate-900 font-semibold text-sm hover:scale-105 transition-transform inline-flex items-center gap-2">
                         Next
                         <svg class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
