--- a/draw.html
+++ b/draw.html
@@ -27,10 +27,9 @@
 </head>
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 flex flex-col min-h-screen">
 
-    <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors duration-300 relative overflow-hidden">
+    <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors duration-300">
 
-    <div id="header-pattern" class="absolute inset-0 pointer-events-none opacity-25" aria-hidden="true"></div>
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col space-y-4 py-4">
                 <div class="flex justify-between items-center h-16">
                     <div class="flex items-center">
