--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 </head>
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100">
 
-    <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors duration-300 relative overflow-hidden">
+    <header class="bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-20 shadow-sm transition-colors duration-300">
 
-    <div id="header-pattern" class="absolute inset-0 pointer-events-none opacity-25" aria-hidden="true"></div>
         <div class="w-full px-4">
             <div class="flex flex-col space-y-4 py-4">
                 <div class="flex justify-between items-center h-16">
